# Tippspiel

./: .gitignore  PUBLIC_LAUNCH_READINESS.md  Pipfile  README.md  TECH_DEBT.md  deploy_backend.sh  deploy_frontend.sh  deploy_frontend_remotely.sh  requirements.txt
backend/: .env.example  Pipfile  __init__.py  add_event_urls.py  add_sleepers.py  backfill_biathlon_athlete_ids.py  backfill_biathlon_source_ids.py  backfill_event_locations.py  backfill_event_race_formats.py  chrome_manager.py  config.py  config_dev.py  config_prod.py  config_test.py  main.py  manage_athlete_duplicates.py  manipulate_db.py  migrate.py  populate_db.py  pyproject.toml  refresh_athlete_seed_data.py  requirements.txt  run_tippspiel_backend  tippspiel_backend.service  utils.py
backend/database/: athletes.csv  chrome_manager.py  countries.csv  create.sql  db_manager.py  disciplines.csv  event_types.csv  tippspiel.db
backend/disciplines/: biathlon.py
backend/models/: athlete.py  base_model.py  bet.py  country.py  discipline.py  event.py  event_type.py  game.py  result.py  score_event.py  user.py
backend/scraping/: skispringen.py  skispringen_athletes.csv
backend/src/: athlete_duplicates.py  chrome_manager.py  ibu_api.py  time_utils.py  utils.py
backend/templates/: layout.html
backend/test/: conftest.py  test_athlete_duplicates.py  test_athlete_model.py  test_authz.py  test_backfill_biathlon_athlete_ids.py  test_backfill_biathlon_source_ids.py  test_backfill_event_locations.py  test_backfill_event_race_formats.py  test_bet_model.py  test_blueprint_admin.py  test_blueprint_event.py  (+28 more)
(+259 files in other folders)
