[project]
name = ""
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "flask",
    "flask-login",
    "flask-sqlalchemy",
    "pandas",
    "lxml",
    "html5lib",
    "beautifulsoup4",
    "requests",
    "selenium",
    "pytest",
    "inquirer",
    "firebase-admin",
    "beartype",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
